# nod

./: .nodignore  Contributing.md  README.md  action.yaml  ai-spec.md  nod.py  pyproject.toml
.github/workflows/: nod-gatekeeper.yml
defaults/: rules-eu-ai-act.yaml  rules-nist-ai-rmf.yaml  rules-owasp-llm-top10.yaml  rules-security-baseline.yaml  rules.yaml
examples/: spec_compliant.md
src/nod/: __init__.py  cli.py  generator.py  reporters.py  scanner.py  utils.py
templates/: .gitlab-ci.yml  azure-pipelines.yml
tests/: spec_risky.md  test_core.py
