[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nod-linter"
version = "1.4.0"
description = "A compliance-as-code gatekeeper for AI specifications."
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "compliance", "linter", "security", "nist", "eu-ai-act"]
dependencies = [
    "PyYAML>=6.0",
]
requires-python = ">=3.8"

[project.scripts]
nod = "nod:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/nod"
"Bug Tracker" = "https://github.com/yourusername/nod/issues"
