[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nod-linter"
version = "2.1.0"
description = "A compliance-as-code gatekeeper for AI specifications."
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "compliance", "linter", "security", "nist", "eu-ai-act"]
dependencies = [
    "PyYAML>=6.0",
]
requires-python = ">=3.10"

[project.scripts]
nod = "nod.cli:main"

[project.urls]
"Homepage" = "https://github.com/mraml/nod"
"Bug Tracker" = "https://github.com/mraml/nod/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nod = ["defaults/*.yaml"]
